<resources>
    <string name="app_name">Hunger</string>
    <string name="login"><b>Login</b></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password1">Forgot Password </string>
    <string name="don_t_you_have_an_account_signup">Don\'t you Have an Account ?<font color='#54BD4C'>Signup</font></string>
    <string name="login_with_mobile">Login with Mobile</string>
    <string name="create_account"><b>Create Account</b></string>
    <string name="fullname">Fullname</string>
    <string name="already_have_an_account_login">Already have an account ?<font color='#54BD4C'>Login</font></string>
    <string name="verification_mobile_no"><b>Verification Mobile No</b></string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="login_with_mobile_no"><b>Login with Mobile No</b></string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="do_you_want_to_go_back">Do you want to go <font color='#54BD4C'>Back</font>?</string>
    <string name="my_account">My Account</string>
    <string name="saved">Saved</string>
    <string name="search">Search</string>
    <string name="places">Places</string>
    <string name="headlines">Headlines</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_buy_fragment">Hello buy fragment</string>
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_category_fragment">Hello category fragment</string>
    <string name="hello_account_fragment">Hello account fragment</string>
    <string name="hello_offer_fragment">Hello offer fragment</string>
    <string name="soumya"><b>Soumya</b></string>
    <string name="update_profile"><font color='#54BD4C'><b>Update Profile</b></font></string>
    <string name="update">Update</string>
    <string name="change_password"><b>Change Password</b></string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change">Change</string>
    <string name="get_in_touch">Get in Touch</string>
    <string name="contact_us">Contact Us</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_here_a_message">Enter here a message</string>
    <string name="sample_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="search_by_locality">Search by Locality</string>
    <string name="camera_and_externalStrorage_rationale">camera and external storage permission are required to set profile photo </string>
    <string name="returned_from_app_settings_to_activity">Returned from app settings</string>
    <string name="rating">Rate Us</string>
    <string name="loginasreceiver">login as Receiver</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="locality">Locality</string>
    <string name="city">City</string>
    <string name="login_as_receiver"><b>Login as Receiver</b></string>
    <string name="home">Home</string>
    <string name="requests">Requests</string>
    <string name="feedback">Feedback</string>
    <string name="reviews"><b>Reviews</b></string>
    <string name="your_current_ratings"><b>Your Current Ratings</b></string>
    <string name="people_rated"><b>People Rated</b></string>
    <string name="orders"><b>Orders</b></string>
    <string name="welcome_to_hunger_donate_food_app">Welcome to Hunger-Donate Food App</string>
    <string name="email_Gmail_com">email@gmail.com</string>
    <string name="view_your_ratings">View your current Ratings</string>
    <string name="view_all_reviews">View all Reviews</string>
    <string name="notification">Notification</string>

</resources>