<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/buttons">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/headlines" />
        <item
            android:id="@+id/category"
            android:icon="@drawable/ic_baseline_place_24"
            android:title="@string/places" />
        <item
            android:id="@+id/buy"
            android:icon="@drawable/ic_baseline_timeline_24"
            android:title="@string/requests" />
        <item
            android:id="@+id/offer"
            android:icon="@drawable/ic_baseline_notifications_active_24"
            android:title="@string/notification" />
        <item
            android:id="@+id/my_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/my_account" />
    </group>
</menu>