<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/buttons">
        <item
            android:id="@+id/lad_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/lad_request"
            android:icon="@drawable/ic_baseline_timeline_24"
            android:title="@string/requests" />
        <item
            android:id="@+id/lad_feedback"
            android:icon="@drawable/ic_baseline_feedback_24"
            android:title="@string/feedback" />
        <item
            android:id="@+id/lad_my_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/my_account" />
    </group>
</menu>